# torchtime

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  requirements.txt
docs/source/: conf.py  datasets.rst  get-started.rst  index.rst  installation.rst  io.rst  models.rst  refs.bib  torchtime.rst  transforms.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: dataset_class.rst  layout.html
examples/tutorials/: README.rst  classification_tutorial.py
torchtime/: __init__.py  exceptions.py  utils.py
torchtime/datasets/: __init__.py  data_io.py  dewesoft.py  pandas.py  timeseries.py  ucruea.py  utils.py
torchtime/io/: __init__.py  arff.py  dwsoft.py  ts.py
torchtime/models/: __init__.py  _api.py  inception.py
torchtime/transforms/: functional.py  transforms.py
